// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app actions should fire getAccount 1`] = `
Array [
  Object {
    "request": Object {
      "user": Object {
        "accountNumber": null,
        "authenticated": true,
      },
    },
    "type": "GET_ACCOUNT_NUMBER_REQUEST",
  },
  Object {
    "request": Object {
      "user": Object {
        "accountNumber": null,
        "authenticated": true,
      },
    },
    "response": 10,
    "type": "GET_ACCOUNT_NUMBER_SUCCESS",
  },
]
`;

exports[`app actions should fire getAllData 1`] = `
Array [
  Object {
    "request": Object {
      "user": Object {
        "accountNumber": "10",
        "authenticated": true,
      },
    },
    "type": "GET_PORTFOLIO_REQUEST",
  },
  Object {
    "request": Object {
      "user": Object {
        "accountNumber": "10",
        "authenticated": true,
      },
    },
    "response": Object {
      "results": Array [],
    },
    "type": "GET_PORTFOLIO_SUCCESS",
  },
  Object {
    "request": Object {
      "user": Object {
        "accountNumber": "10",
        "authenticated": true,
      },
    },
    "type": "GET_ACCOUNT_POSITIONS_REQUEST",
  },
  Object {
    "request": Object {
      "user": Object {
        "accountNumber": "10",
        "authenticated": true,
      },
    },
    "response": Array [
      Object {
        "averageBuyPrice": 10,
        "currentPrice": 2,
        "instrument": Object {
          "name": "name",
          "quote": "https://quote",
          "symbol": "a",
        },
        "name": "name",
        "quantity": 1,
        "quote": Object {
          "last_traded_price": 2,
        },
        "symbol": "a",
      },
    ],
    "type": "GET_ACCOUNT_POSITIONS_SUCCESS",
  },
  Object {
    "request": Object {
      "user": Object {
        "accountNumber": "10",
        "authenticated": true,
      },
    },
    "type": "GET_WATCH_LIST_REQUEST",
  },
  Object {
    "request": Object {
      "user": Object {
        "accountNumber": "10",
        "authenticated": true,
      },
    },
    "response": Array [],
    "type": "GET_WATCH_LIST_SUCCESS",
  },
]
`;

exports[`app actions should fire getPortfolio 1`] = `
Array [
  Object {
    "request": Object {
      "user": Object {
        "accountNumber": "10",
        "authenticated": true,
      },
    },
    "type": "GET_PORTFOLIO_REQUEST",
  },
  Object {
    "request": Object {
      "user": Object {
        "accountNumber": "10",
        "authenticated": true,
      },
    },
    "response": Object {
      "results": Array [
        Object {
          "portfolios": Array [],
        },
      ],
    },
    "type": "GET_PORTFOLIO_SUCCESS",
  },
]
`;

exports[`app actions should fire getWatchList 1`] = `
Array [
  Object {
    "request": Object {
      "user": Object {
        "accountNumber": "10",
        "authenticated": true,
      },
    },
    "type": "GET_WATCH_LIST_REQUEST",
  },
  Object {
    "request": Object {
      "user": Object {
        "accountNumber": "10",
        "authenticated": true,
      },
    },
    "response": Array [
      Object {
        "last_traded_price": 2,
      },
    ],
    "type": "GET_WATCH_LIST_SUCCESS",
  },
]
`;

exports[`app actions should fire refresh timer 1`] = `
Object {
  "type": "START_REFRESH_TIMER",
}
`;

exports[`app actions should fire stop timer 1`] = `
Object {
  "type": "STOP_REFRESH_TIMER",
}
`;
